[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simpa"
dynamic = ["version"]
authors = [
    {name = "Division of Intelligent Medical Systems (IMSY), DKFZ", email = "k.dreher@dkfz-heidelberg.de"},
    {name = "Janek Groehl <janekgroehl@live.de>"}
]
description = "Simulation and Image Processing for Photonics and Acoustics"
license = {text = "MIT"}
readme = "README.md"
keywords = ["simulation", "photonics", "acoustics"]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",       # Uses PSF-License (MIT compatible)
    "numpy>=1.21.4",           # Uses BSD-License (MIT compatible)
    "scipy>=1.13.0",           # Uses BSD-like-License (MIT compatible)
    "pynrrd>=0.4.2",           # Uses MIT-License (MIT compatible)
    "scikit-image>=0.18.3",    # Uses BSD-License (MIT compatible)
    "xmltodict>=0.12.0",       # Uses MIT-License (MIT compatible)
    "h5py>=3.6.0",             # Uses BSD-License (MIT compatible)
    "pandas>=1.3.4",           # Uses BSD-License (MIT compatible)
    "coverage>=6.1.2",         # Uses Apache 2.0-License (MIT compatible)
    "Deprecated>=1.2.13",      # Uses MIT-License (MIT compatible)
    "torch>=1.10.0",           # Uses BSD-License (MIT compatible)
    "python-dotenv>=0.19.2",   # Uses BSD-License (MIT compatible)
    "pacfish>=0.4.4",          # Uses BSD-License (MIT compatible)
    "requests>=2.26.0",        # Uses Apache 2.0-License (MIT compatible)
    "wget>=3.2",               # Is Public Domain (MIT compatible)
    "jdata>=0.5.2",            # Uses Apache 2.0-License (MIT compatible)
    "pre-commit>=3.2.2",       # Uses MIT-License (MIT compatible)
    "PyWavelets",              # Uses MIT-License (MIT compatible)
    "scikit-learn>=1.1.0",     # Uses BSD-License (MIT compatible)
]

[project.optional-dependencies]
docs = [
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "Sphinx>=5.1.1,<6.0.0",
    "myst-parser>=0.18.0,<1.1"
]
profile = [
    "pytorch_memlab>=0.3.0,<0.4.0",
    "line_profiler>=4.0.0,<5.0.0",
    "memory_profiler>=0.61.0,<0.62.0"
]

[project.urls]
Homepage = "https://github.com/IMSY-DKFZ/simpa"
Documentation = "https://simpa.readthedocs.io/en/main/"
Repository = "https://github.com/IMSY-DKFZ/simpa"

[tool.setuptools.packages.find]
include = ["simpa", "simpa_tests", "simpa_examples"]

[tool.setuptools_scm]

[tool.autopep8]
max_line_length = 120